Fixed overlapping of hero banner on top of drupal messages

--- a/scss/shame.scss
+++ b/scss/shame.scss
@@ -18,9 +18,6 @@ nav ul li {
      margin-right: -280px;
      margin-bottom: -40px;
   }
-  .front .field-hero-image {
-     margin-top: -80px;
-  }
 }
 
 @media screen and (min-width: 576px) {
